--- a/src/_scss/pages/_postlist.scss
+++ b/src/_scss/pages/_postlist.scss
@@ -246,7 +246,7 @@ $screen-xl-min: 1px;
   }
 }
 
-.darkmode{
+:root[color-mode="dark"] {
   .list a {
     text-decoration: none;
     color: var(--main-color);
