--- a/src/_includes/layouts/work.njk
+++ b/src/_includes/layouts/work.njk
@@ -120,8 +120,10 @@ templateClass: tmpl-work
 
 
     <div class="discription">
-        <div class="label">Discription:</div>
-        {{ description.long }}
+        {% if description.long %}
+            <div class="label">Discription:</div>
+            {{ description.long }}
+        {% endif %}
     </div>
 
 
@@ -148,7 +150,7 @@ templateClass: tmpl-work
                                 {% supportImage image %}
                                 <!-- {% image image, description.short, "(min-width: 30em) 50vw, 100vw"  %} -->
                             {% else %}
-                                {% set canonical = "." + page.url + image %}
+                                {% set canonical = "./src" + page.url + image %}
                                 {% image canonical, description.short, "(min-width: 30em) 50vw, 100vw"  %}
                             {% endif %}
                         {% endif %}
