--- a/src/_scss/components/_header.scss
+++ b/src/_scss/components/_header.scss
@@ -7,6 +7,7 @@
     grid-template-columns: auto 1fr;
     gap: var(--gap);
     border-bottom: var(--border-size) solid var(--main-color);
+    background-color: var(--background);
     
     padding: 1rem 0 1rem 0;
     line-height: 1.1rem;
