Update with new collections

--- a/src/_includes/components/bunny.njk
+++ b/src/_includes/components/bunny.njk
@@ -4,4 +4,5 @@
     style="border: none; position: absolute; top: 0; height: 100%; width: 100%;" 
     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;" 
     allowfullscreen="true"
+    title="Documnetation video of {{ title }}"
 ></iframe>
