--- a/src/_scss/components/_footer.scss
+++ b/src/_scss/components/_footer.scss
@@ -203,6 +203,7 @@
     display: grid;
     background-color: var(--background);
     margin-bottom: 3rem;
+    gap: 3rem;
 }
   
 .filteropen .footer{
