--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -2,7 +2,9 @@
 <div class="footer">
     <div class="triggers">
       <div class="filter-icon filter-trigger"><div></div><div></div><div></div></div>
-      <div class="trigger-gap"><span class="copy-left">🄯</span>  Anthony Warnick </div>
+      <div class="trigger-gap">
+        <!-- <span class="copy-left">🄯</span>  Anthony Warnick  -->
+      </div>
       <div class="lightbox-trigger"></div>
       <div class="grid-trigger"><div></div><div></div><div></div><div></div></div>
       <div class="mode-toggle" aria-label="toggle dark mode"></div>
