fix stray issue for 1.0.0

--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -7,7 +7,7 @@
   <nav class="main-nav">
     {{ collections.all | eleventyNavigation | eleventyNavigationToHtml | safe }}
   </nav>
-  <div id="hamburger">
+  <div id="hamburger" role="menuitem">
     <span></span>
     <span></span>
     <span></span>
