--- a/src/manifest.njk
+++ b/src/manifest.njk
@@ -8,6 +8,7 @@ permalink: /manifest.json
   "short_name": "Warnick",
   "start_url": ".",
   "scope": ".",
+  "theme_color": "#000",
   {# "start_url": "/pwa-examples/a2hs/index.html" #}
   "display": "fullscreen",
   "background_color": "#000",
