--- a/src/_scss/layouts/_home.scss
+++ b/src/_scss/layouts/_home.scss
@@ -4,9 +4,12 @@
 
     @media screen and (min-width: 600px ) and (max-width: 850px) {
         padding: calc(var(--padding) * 4) var(--padding) var(--padding) var(--padding);
+        margin-bottom: calc(var(--padding) * 4);
     }
     
     @media screen and (max-width: 600px) {
         padding: calc(var(--padding) * 4) var(--padding) var(--padding) var(--padding); 
+        margin-bottom: calc(var(--padding) * 4);
     }
 }
+
