--- a/src/_scss/layouts/_work.scss
+++ b/src/_scss/layouts/_work.scss
@@ -12,7 +12,7 @@
   // "discription support_images"
   // "link support_images";
   grid-template-areas: 
-          "t t t t t t t t t t n n"
+          "t t t t t t t t t n n n"
           "h h h h h h h h h h h h"
           "m m m m m m m m m m m m"
           "b b b b b b s s s s s s"
@@ -21,7 +21,7 @@
   @media only screen and (max-width: 850px) {
     grid-template-rows: auto auto auto auto 1fr;
     grid-template-areas: 
-          "t t t t t t t t t t n n"
+          "t t t t t t t t n n n n"
           "h h h h h h h h h h h h"
           "m m m m m m m m m m m m"
           "b b b b b b l l l l l l"
@@ -35,7 +35,7 @@
     grid-template-rows: auto auto auto auto auto 1fr;
     grid-template-areas: 
           "h h h h h h h h h h h h"
-          "t t t t t t t t n n n n"
+          "t t t t t t t t t t t t"
           "m m m m m m m m m m m m"
           "b b b b b b b b b b b b"
           "l l l l l l l l l l l l"
@@ -64,7 +64,7 @@
   margin-bottom: 0.5rem;
 
   @media only screen and (max-width: 600px) {
-    font-size: .5rem;
+    font-size: .75rem;
     padding-bottom: 5px;
   }
 }
@@ -75,6 +75,10 @@
 
 .work .archive_number {
   grid-area: n;
+
+  @media only screen and (max-width: 600px) {
+    display: none;
+  }
 }
 
 .work .meta {
@@ -228,7 +232,7 @@
       grid-column: span 4; 
 
       @media only screen and (max-width: 850px) {
-        grid-column: span 1; 
+        grid-column: span 2; 
       }
     }
     .dimensions {
