Fix image issues and add more from 2018

--- a/src/_scss/layouts/_work.scss
+++ b/src/_scss/layouts/_work.scss
@@ -390,6 +390,10 @@
   aspect-ratio: 4/3;
 }
 
+.work .support_images .lightbox{
+  aspect-ratio: 4/3;
+}
+
 .work .images div img{
   width: 100%;
   height: 100%;
