--- a/src/_scss/pages/_postlist.scss
+++ b/src/_scss/pages/_postlist.scss
@@ -186,6 +186,7 @@ $screen-xl-min: 1px;
     .title {
       /* background-color: red; */
       vertical-align: middle;
+      overflow-x: hidden;
     }
     
     .warnickNumber {
