--- a/src/_scss/pages/_postlist.scss
+++ b/src/_scss/pages/_postlist.scss
@@ -287,6 +287,7 @@ $screen-xl-min: 1px;
           display: flex;
           height: 100%;
           border-bottom: unset;
+          position: relative;
         }
 
         .title,
