update a few more works

--- a/src/_includes/layouts/work.njk
+++ b/src/_includes/layouts/work.njk
@@ -12,7 +12,7 @@ templateClass: tmpl-work
         {{ title }}
     </div>
     <div class="archive_number">
-        <div class="label">Warnick ID:</div>
+        <div class="label">Catalog Number:</div>
         {{ warnickNumber }}
     </div>
 
