--- a/src/_includes/partials/postlist.njk
+++ b/src/_includes/partials/postlist.njk
@@ -22,7 +22,7 @@
     <div class="image"></div>
     <div class="sort title" data-sort="title">Title</div>
     <div class="sort year" data-sort="year">Year</div>
-    <div class="sort warnickNumber" data-sort="warnickNumber">Warnick Number</div>
+    <div class="sort warnickNumber" data-sort="warnickNumber">Catalog Number</div>
     <div class="sort dimentions" data-sort="dimentions">Dimensions</div>
     <div class="sort materials" data-sort="materials">Materials</div>
     <div class="sort type" data-sort="type">Type</div>
