--- a/src/_scss/pages/_cv.scss
+++ b/src/_scss/pages/_cv.scss
@@ -35,8 +35,15 @@
 
     .content{
 
-        p:first-of-type{
+        // p:first-of-type{
+        //     text-align: right;
+        //     margin-left: auto;
+        //     width: fit-content;
+        // }
+
+        p:nth-of-type(3){
             text-align: right;
+            margin-top: 10rem;
             margin-left: auto;
             width: fit-content;
         }
