add 2016 works fix auto play video

--- a/src/_includes/components/bunny-lightbox.njk
+++ b/src/_includes/components/bunny-lightbox.njk
@@ -4,7 +4,7 @@
 <a 
     class="lightbox" 
     data-pswp-type="bunny-video" 
-    data-bunny-url="{{ bunny.video }}" 
+    data-bunny-url="{{ bunny.video }}?autoplay=false" 
     href="#" 
     target="_blank">
         <img src="{{ bunny.thumb }}" alt="">
