--- a/src/_includes/components/bunny.njk
+++ b/src/_includes/components/bunny.njk
@@ -2,7 +2,7 @@
     src="{{ videolink }}" 
     loading="lazy" 
     style="border: none; position: absolute; top: 0; height: 100%; width: 100%;" 
-    allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;" 
+    allow="accelerometer; gyroscope; encrypted-media; picture-in-picture;" 
     allowfullscreen="true"
     title="Documnetation video of {{ title }}"
 ></iframe>
