--- a/src/_includes/partials/postlist.njk
+++ b/src/_includes/partials/postlist.njk
@@ -19,7 +19,7 @@
     <!-- Exhibition title -->
     <!-- Venue  -->
     <!-- Period -->
-    <div class="image"></div>
+    <div class="image" style="display:none;"></div>
     <div class="sort title" data-sort="title">Title</div>
     <div class="sort year" data-sort="year">Year</div>
     <div class="sort warnickNumber" data-sort="warnickNumber">Catalog Number</div>
