--- a/src/_scss/pages/_postlist.scss
+++ b/src/_scss/pages/_postlist.scss
@@ -160,13 +160,16 @@ $screen-xl-min: 1px;
     
     .image {
       width: 300px;
+      height: 300px;
       position: fixed;
       top: 0;
       left: 0;
       z-index: 100;
 
       img{
-        height: auto;
+        object-fit: contain;
+        height: 100%;
+        width: 100%;
       }
     }
     
