--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -22,7 +22,9 @@
     </div>
     
     {% include "partials/footer.njk" %}
-    <script src="//cdnjs.cloudflare.com/ajax/libs/list.js/2.3.1/list.min.js"></script>
+    
+    <script src="{{ '/js/list.min.js' | url}}"></script>
+    <script src="{{ '/js/tachyon.min.js' | url}}"></script>
     <script src="{{ '/js/script.js' | url}}" defer></script>
 </body>
 </html>
